[package]
name = "vr-hass-power"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"

directories = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

ureq = { version = "2", features = ["json"] }

sysinfo = "0.16"
